# ehgml

./: .gitignore  AUTHORS  CArray.cc  CArray.hh  CClosure.cc  CClosure.hh  CGml.cc  CGml.hh  CGmlError.cc  CGmlError.hh  CHitInfo.cc  CHitInfo.hh  CLight.cc  CLight.hh  CMatrix.cc  CMatrix.hh  CModel.cc  CModel.hh  CObject.cc  CObject.hh  CObjectHeap.cc  CObjectHeap.hh  CPoint.cc  CPoint.hh  CRay.hh  CRenderer.cc  CRenderer.hh  CScalar.cc  CScalar.hh  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  TObjectRef.hh  acconfig.h  config.h.in  configure  configure.in  (+5 more)
docs/: Makefile.am  Makefile.in
examples/: Makefile.am  Makefile.in  cone.gml  cube.gml  cylinder.gml  diff.gml  intersect.gml  reflect.gml  sphere.gml  spheres2.gml  unit-cone.gml
