#!/bin/sh
# vi:set sts=2 sw=2:
dnl Process this file with autoconf to produce a configure script.
AC_INIT(CGml.cc)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(ehgml,0.3)

AC_ARG_ENABLE(debug,[  --enable-debug                 Enables some debugging code which slows down
                              rendering.],[
if test x$enable_debug = xyes ; then
  DEBUG=yes 
  AC_DEFINE_UNQUOTED(DEBUG,1)
fi
])

dnl *
dnl * Don't compile in asserts if debug isn't enabled.
dnl *
if test x$DEBUG != xyes ; then
  AC_DEFINE_UNQUOTED(NDEBUG,1)
fi

dnl Checks for programs.
AC_PROG_CXX
AM_PROG_LEX

dnl Checks for libraries.
AC_CHECK_LIB(m, sin)

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.
dnl * Doh, this is C++, of course we have const.
dnl * AC_C_CONST

dnl Checks for library functions.
AC_HEADER_STDC
AC_CHECK_FUNCS(strtod)

dnl *
dnl * Check to see if the compiler supports named return values. (g++)
dnl *
AC_MSG_CHECKING(if c++ compiler supports named return values)
AC_LANG_CPLUSPLUS
named_return_values=no
AC_TRY_COMPILE([
#include <assert.h>
int do_it (void) return r
{
  r = 1;
  return;
}],[
  assert (do_it () == 1);
],[named_return_values=yes
])

if test x$named_return_values = xyes ; then
  AC_DEFINE_UNQUOTED(HAVE_NAMED_RETURN_VALUES,1)
fi
AC_MSG_RESULT($named_return_values)


AC_OUTPUT(Makefile docs/Makefile examples/Makefile)
